Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21646

Failure to compile my_addr_resolve.c with binutils-2.34

    XMLWordPrintable

Details

    Description

      Binutils 2.34 has changed its API so 3 of the calls in my_sys/my_addr_resolve.c cause a failed build.

      As seen in Gentoo bug 707852

      ld: mysys/libmysys.a(my_addr_resolve.c.o): in function `my_addr_resolve':
      my_addr_resolve.c:(.text+0x45): undefined reference to `bfd_get_section_flags'
      ld: my_addr_resolve.c:(.text+0x5a): undefined reference to `bfd_get_section_vma'
      ld: my_addr_resolve.c:(.text+0x6c): undefined reference to `bfd_get_section_size'
      collect2: error: ld returned 1 exit status
      

      Proposed patch is attached, but feel free to modify to your standards or other optimization

      Attachments

        Activity

          People

            sanja Oleksandr Byelkin
            grknight Brian Evans
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: