MDEV-21646: Failure to compile my_addr_resolve.c with binutils-2.34

Emulate older API

Bug: https://bugs.gentoo.org/707852
Signed-off-by: Thomas Deutschmann <whissi@gentoo.org>